[package]
name = "flowty"
version = "0.1.0"
authors = ["milchdealer <franzj94@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
env_logger = "~0.7"
chrono = "~0.4"
time = "~0.1"
cron = "~0.6"
prost = "~0.6"
prost-types = "~0.6"
bytes = "~0.5"

[build-dependencies]
prost-build = { version = "~0.6" }
