[package]
name = "flowty-types"
version = "0.1.0"
authors = ["milchdealer <franzj94@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "~0.6"
chrono = "~0.4"
petgraph = { version = "~0.5", default-features = false }
prost = "~0.6"
prost-types = "~0.6"
tonic = { version = "~0.2", features = ["codegen", "prost"] }

[build-dependencies]
tonic-build = { version = "~0.2", features = ["prost"] }
