[package]
name = "local-executor"
version = "0.1.0"
authors = ["milchdealer <franzj94@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
env_logger = "~0.7"
async-stream = "~0.2"
tonic = { version = "~0.2", features = ["codegen", "prost", "async-trait", "tls"] }
prost = "~0.6"
prost-types = "~0.6"
tokio = { version = "~0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "sync"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[build-dependencies]
tonic-build = { version = "~0.2", features = ["prost"] }