[package]
name = "scheduler"
version = "0.1.0"
authors = ["milchdealer <franzj94@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
env_logger = "~0.7"

dotenv = "~0.15"

chrono = "~0.4"
time = "~0.1"
cron = "~0.6"

prost = "~0.6"
prost-types = "~0.6"
tokio = { version = "~0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
tonic = { version = "~0.2", features = ["codegen", "prost", "async-trait", "tls"] }
postgres = { version = "~0.17", features = ["with-chrono-0_4", "with-uuid-0_8"] }

[build-dependencies]
tonic-build = { version = "~0.2", features = ["prost"] }

