[package]
name = "scheduler"
version = "0.1.0"
authors = ["milchdealer <franzj94@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
env_logger = "~0.7"
dotenv = "~0.15"
snafu = "~0.6"
chrono = "~0.4"
cron = "~0.6"

tokio = { version = "~0.2", features = ["rt-core", "macros", "sync", "time", "blocking"] }
tokio-postgres = { version = "~0.5", features = ["with-chrono-0_4", "with-uuid-0_8"] }
tonic = { version = "~0.2", features = ["codegen", "prost", "async-trait", "tls"] }

flowty-types = { path = "../flowty-types" }
